# python_hw_number_20

./: .env.bstack  .env.local_emulator  .gitignore  README.md  config.py  conftest.py  pyproject.toml
tests/android_mobile/: conftest.py  test_onboarding_page_number_four.py  test_onboarding_page_number_one.py  test_onboarding_page_number_three.py  test_onboarding_page_number_two.py
utils/: allure.py  file.py
